--- a/Scripts/Final_Scripts/drivers_variables/8_heatwaves.Rmd
+++ b/Scripts/Final_Scripts/drivers_variables/8_heatwaves.Rmd
@@ -72,6 +72,8 @@ tmap_animation(animation_x_time_map, filename = here("Outputs", "OtherVariables"
                 delay = 50, loop = TRUE, restart.delay = 500,
                 width = 900, height = 900, dpi = 150)
 
+annual_heatwave_mask<- rast(here("Outputs", "OtherVariables", "Climate", "annual_heatwaves_2002_2021.tif"))
+
 #trends or anomaly calculation
 #1- std deviation
 Sys.time(); std_heatwaves <- terra::app (annual_heatwave_mask, fun = sd); Sys.time()
@@ -102,6 +104,22 @@ MKtau <- function(z){
 } 
 Sys.time(); kendall_tau_heatwaves <- terra::app (annual_heatwave_mask, fun = MKtau); Sys.time()
 
+#4- theilsen regression
+library(mblm)
+theilsen_function <- function(z){
+  Y<- 1:length(z)
+  
+  if(all(is.na(z))){
+    return (NA)
+  } else{
+    theilsen_model<- mblm::mblm(z ~ Y, repeated = FALSE)
+    slope_coefficient <- theilsen_model$coefficients[2]
+    slope_coefficient
+  }
+} 
+Sys.time(); theilsen_heatwaves <- terra::app (annual_heatwave_mask, fun = theilsen_function); Sys.time()
+
+
 #Map making
 d_trans<- st_read(here ("Data", "Cattelanetal_Clustering", "cerrado_climate_zones.shp"))
 d_trans<- st_transform(d_trans, crs = 4326)
@@ -119,8 +137,10 @@ mapping_function <- function (anomoly_raster, title){
 Sys.time();std_map <- mapping_function (std_heatwaves, "Std"); Sys.time()
 Sys.time();lm_map <- mapping_function (lm_slope_heatwaves, "Linear Regression"); Sys.time()
 Sys.time();tau_map <- mapping_function (kendall_tau_heatwaves, "Mann-Kendall"); Sys.time()
+Sys.time();theilsen_map <- mapping_function (theilsen_heatwaves, "Theil-Sen Regression"); Sys.time()
 
-anomoly_results_map<- tmap_arrange(std_map, lm_map, tau_map, ncol =3, nrow= 1) 
+
+anomoly_results_map<- tmap_arrange(std_map, lm_map, tau_map, theilsen_map, ncol =4, nrow= 1) 
 tmap_save(anomoly_results_map, here("Outputs", "OtherVariables", "Climate", "anomoly_heatwaves_methods_results.png"),
         height = 50, width = 50, units = "cm", dpi=700)
 
